--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -63,7 +63,8 @@
                 href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-2/index.html">Kalkulator napiwku</a></div>
             <div class="project-box project-5"><a class="portfolio-page-link"
                 href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-3/index.html">Gra Pac-Man</a></div>
-            <div class="project-box project-6"><a class="portfolio-page-link" href="https://jfdzr5-bf21f.web.app/">Home
+            <div class="project-box project-6"><a class="portfolio-page-link"
+                href="https://homeorganizer-44534.web.app/">Home
                 Organizer React App</a></div>
             <div class="project-box project-7"><a class="portfolio-page-link"
                 href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-4/index.html">Wyszukiwarka filmów</a>
