--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -53,21 +53,25 @@
           <h2 class="h2-portfolio-page">Moje projekty</h2>
           <div class="grid-projects">
             <div class="project-box project-1"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/project-1/index.html">Projekt 1 CSS</a></div>
+                href="./../../../jfdzr5-projects-d-reczek/project-1/index.html" target="blank">Projekt 1 CSS</a></div>
             <div class="project-box project-2"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/project-4/index.html">Projekt 2 CSS</a></div>
+                href="./../../../jfdzr5-projects-d-reczek/project-4/index.html" target="blank">Projekt 2 CSS</a></div>
             <div class="project-box project-3"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-1/index.html">Gra papier, <br> kamień,
+                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-1/index.html" target="blank">Gra papier,
+                <br> kamień,
                 nożyce</a></div>
             <div class="project-box project-4"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-2/index.html">Kalkulator napiwku</a></div>
+                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-2/index.html" target="blank">Kalkulator
+                napiwku</a></div>
             <div class="project-box project-5"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-3/index.html">Gra Pac-Man</a></div>
+                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-3/index.html" target="blank">Gra
+                Pac-Man</a></div>
             <div class="project-box project-6"><a class="portfolio-page-link"
-                href="https://homeorganizer-44534.web.app/">Home
+                href="https://homeorganizer-44534.web.app/" target="blank">Home
                 Organizer React App</a></div>
             <div class="project-box project-7"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-4/index.html">Wyszukiwarka filmów</a>
+                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-4/index.html" target="blank">Wyszukiwarka
+                filmów</a>
             </div>
 
           </div>
