edit contact page and portfolio

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./../CSS/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="icon" href="resources/my-logo.png" />
+  <link rel="icon" href="../resources/my-logo.png" />
+
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
     rel="stylesheet" />
   <title>DR - przyszły Fronted Developer</title>
@@ -78,7 +79,7 @@
       </div>
     </main>
     <footer>
-      <p class="copy-right">&copy; 2021 All rights reserverd</p>
+      <p class="copy-right">&copy; 2022 All rights reserverd</p>
       <p class="made-by">Made by D. Reczek</p>
     </footer>
   </div>
