--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./../CSS/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="icon" href="resources/my-logo.png" />
+  <link rel="icon" href="../resources/my-logo.png" />
+
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,600;1,400&display=swap"
     rel="stylesheet" />
   <title>DR - przyszły Fronted Developer</title>
@@ -53,24 +54,24 @@
           <h2 class="h2-portfolio-page">Moje projekty</h2>
           <div class="grid-projects">
             <div class="project-box project-1"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/project-1/index.html" target="blank">Projekt 1 CSS</a></div>
+                href="https://css-project-1-3d92a.web.app/" target="blank">Projekt 1 CSS</a></div>
             <div class="project-box project-2"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/project-4/index.html" target="blank">Projekt 2 CSS</a></div>
+                href="https://css-project-2-f3556.web.app/" target="blank">Projekt 2 CSS</a></div>
             <div class="project-box project-3"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-1/index.html" target="blank">Gra papier,
+                href="https://css-project-2-f3556.web.app/" target="blank">Gra papier,
                 <br> kamień,
                 nożyce</a></div>
             <div class="project-box project-4"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-2/index.html" target="blank">Kalkulator
+                href="https://tip-calculator-b5153.web.app/" target="blank">Kalkulator
                 napiwku</a></div>
-            <div class="project-box project-5"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-3/index.html" target="blank">Gra
+            <div class="project-box project-5"><a class="portfolio-page-link" href="https://pac-man-game-53b86.web.app/"
+                target="blank">Gra
                 Pac-Man</a></div>
             <div class="project-box project-6"><a class="portfolio-page-link"
                 href="https://homeorganizer-44534.web.app/" target="blank">Home
                 Organizer React App</a></div>
             <div class="project-box project-7"><a class="portfolio-page-link"
-                href="./../../../jfdzr5-projects-d-reczek/JS-Projects/Project-4/index.html" target="blank">Wyszukiwarka
+                href="https://movie-search-engine-5f48d.web.app/" target="blank">Wyszukiwarka
                 filmów</a>
             </div>
 
@@ -79,7 +80,7 @@
       </section>
     </main>
     <footer>
-      <p class="copy-right">&copy; 2021 All rights reserverd</p>
+      <p class="copy-right">&copy; 2022 All rights reserverd</p>
       <p class="made-by">Made by D. Reczek</p>
     </footer>
   </div>
