--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -58,7 +58,7 @@
             <div class="project-box project-2"><a class="portfolio-page-link"
                 href="https://css-project-2-f3556.web.app/" target="blank">Projekt 2 CSS</a></div>
             <div class="project-box project-3"><a class="portfolio-page-link"
-                href="https://css-project-2-f3556.web.app/" target="blank">Gra papier,
+                href="https://paper-rock-scissors-68237.web.app/" target="blank">Gra papier,
                 <br> kamień,
                 nożyce</a></div>
             <div class="project-box project-4"><a class="portfolio-page-link"
