move about me information to main page

--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
             Bardzo lubie spędzać czas przy komputerze tworząc na nim
             różne rzeczy oraz rozwiązując rozmaite problemy. Pomyślałem, że tym chciałabym się zajmować więc zacząłem
             działać.
-            To był mój pierwszy krok do rozpoczęcia przygody z programowaniem.
+            To był mój pierwszy krok do rozpoczęcia przygody z programowaniem. <br><br>
+            Ukończyłem Boot Camp podczas którego poznałem technologie takie jak <strong>HTML, CSS, JavaScript,
+              TypeScript, Firebase, Git</strong> Znam również biblioteki takie jak <strong>Redux, Material UI, Styled
+              Components.</strong> Podczas trwania kursu, udało mi się stworzyć kilka mniejszych projektów jak i większą
+            aplikacje do organizowania porządku domowego, napisaną w React-cie, czy inne projekty zawarte w zakładce <a
+              class="portfolio-link" href="./portfolio.html">portfolio</a>
+            do której Cię zapraszam.
           </p>
+
         </div>
         <div class="my-photo">
           <img src="resources/my-photo.jpg" alt="Moje zdjęcie nad morzem" />
