fix portfolio link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               TypeScript, Firebase, Git</strong> Znam również biblioteki takie jak <strong>Redux, Material UI, Styled
               Components.</strong> Podczas trwania kursu, udało mi się stworzyć kilka mniejszych projektów jak i większą
             aplikacje do organizowania porządku domowego, napisaną w React-cie, czy inne projekty zawarte w zakładce <a
-              class="portfolio-link" href="./portfolio.html">portfolio</a>
+              class="portfolio-link" href="../d-reczek.github.io/pages/portfolio.html">portfolio</a>
             do której Cię zapraszam.
           </p>
 
